updated meta tags and website screenshot

--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,11 @@
   <meta charset="utf-8" />
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Porfolio Website to showcase my projects and my personal branding. " />
+  <meta property="og:title" content="Ella Bach's Portfolio" />
+  <meta property="og:description" content="Porfolio Website to showcase my projects and my personal branding." />
+  <meta property="og:image" content="https://res.cloudinary.com/dghbswztq/image/upload/v1736216550/screenshot_wbj6nx.png" />
+  <meta property="og:url" content="https://www.ellabach.com/" />
+  <meta property="og:type" content="portfolio website" />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.png" />
   <!--
       manifest.json provides metadata used when your web app is installed on a
