fixed: performance and accessibility with aria-label and lazy-loading

--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8" />
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="description" content="Portfolio Website of Ella Bach, showcase my ability in web design and development."/>
   <meta property="og:title" content="Ella Bach's Portfolio" />
   <meta property="og:description" content="Porfolio Website to showcase my projects and my personal branding." />
   <meta property="og:image" content="https://res.cloudinary.com/dghbswztq/image/upload/v1736216550/screenshot_wbj6nx.png" />
@@ -37,7 +38,9 @@
 
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
-  <div id="root"></div>
+  <div id="root">
+    <h1 style="display: hidden;">Ella's Portfolio</h1>
+  </div>
   <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
