--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,12 @@
   <meta charset="utf-8" />
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="description" content="Portfolio Website of Ella Bach, showcase my ability in web design and development."/>
+  <meta name="description"
+    content="Portfolio Website of Ella Bach, showcase my ability in web design and development." />
   <meta property="og:title" content="Ella Bach's Portfolio" />
   <meta property="og:description" content="Porfolio Website to showcase my projects and my personal branding." />
-  <meta property="og:image" content="https://res.cloudinary.com/dghbswztq/image/upload/v1736216550/screenshot_wbj6nx.png" />
+  <meta property="og:image"
+    content="https://res.cloudinary.com/dghbswztq/image/upload/v1736216550/screenshot_wbj6nx.png" />
   <meta property="og:url" content="https://www.ellabach.com/" />
   <meta property="og:type" content="portfolio website" />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.png" />
@@ -19,11 +21,17 @@
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
   <!-- Fonts -->
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link
-    href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:ital,wght@0,200..900;1,200..900&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap"
-    rel="stylesheet">
+  <link rel="preload"
+    href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@400;700&family=Ubuntu:wght@400;700&display=swap"
+    as="style">
+  <link rel="stylesheet"
+    href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@400;700&family=Ubuntu:wght@400;700&display=swap"
+    media="print" onload="this.media='all'">
+  <noscript>
+    <link rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@400;700&family=Ubuntu:wght@400;700&display=swap">
+  </noscript>
+
   <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
